--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -90,6 +90,10 @@
         margin-left: var(--card-gap);
         max-width: 354px;
         }
+    @media screen and (min-width: 1200px){
+        flex-basis: calc((100% - 3 * var(--card-gap))/3);
+        max-width: 370px;
+    }    
     &:hover,
     &:focus {
         box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16),
@@ -102,13 +106,8 @@
         transform: translateY(0);
     }
 }
-.project__description+.project__description{
-    @media screen and (min-width: 768px) {
-            height: 146px;
-        }
-}
 .project__description--first {
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 1199px){
     height: 146px;
 }
 }
@@ -135,7 +134,7 @@
     font-size: 16px;
     line-height: calc(30/16);
     color: var(--primery-text-color);
-}
+    }
 
 .project__thumb {
     position: relative;
